# squid-control

./: .cursorignore  .cursorrules  .gitignore  Dockerfile  MANIFEST.in  README.md  cache_config_file_path.txt  config_parameters.txt  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg  start_hypha_service.py  test_quick_scan.py  u2os_fucci_illumination_configurations.xml
.github/workflows/: tests.yml
bioimageio_chatbot/: chatbot.py
bioimageio_chatbot/chatbot_extensions/: code_interpreter.py  hypha_store.py  microscop_control_extension.py
docker/: Dockerfile
docs/: coordinates_of_fovs_simulated_sample.csv  feature_introduction.md  hypha_tutorial.md  index.html  zarr_image_workflow.dot
hypha_tools/: hypha_storage.py
hypha_tools/artifact_manager/: artifact_manager.py  create_dataset.py  create_gallery.py  limit_issue.py  step1_upload_zarr.py  step2_get_tiles.py  upload_file.py  upload_zarr.py
hypha_tools/chatbot/: aask.py
hypha_tools/tile_service/: test_tiles_service.py  tile_service_artifact_manager.py  tile_service_local.py
scripts/: main_hcs.py  run_tests.py  start_chatbot_vision.py  start_hypha_for_squid.py
scripts/tools/: README_STITCHING.md  convert_limit_mm_to_usteps.py  hypha_storage.py  image-stitching-ome-preview.py  image_stitching.py  image_stitching_whole_view.py  index.html  process_coordinates_file.py  register_hypha_service_streaming_imaging_map.py  script_image_stitching_from_scanning_result.py  script_microscope_tile_service.py  script_process_coordinates_file.py  stitch_and_save_ome_ngff.py  streaming_imaging_map.py  test_hypha_service_streaming_imaging_map.py  test_ome_zarr_openlayer_locally.py  test_tiles_service.py  verify_imaging_streaming_map.html  visualize_zarr_chunks.py
squid_control/: .gitignore  __init__.py  channel_configurations.xml  configuration_HCS_v2.ini  configuration_HCS_v2_example.ini  focus_camera_configurations.xml  squid_controller.py  uc2_fucci_illumination_configurations.xml
squid_control/control/: _def.py  config.py  core.py  core_reef.py  edge_positions.json  gui_hcs.py  microcontroller.py  widgets.py
squid_control/control/camera/: camera_default.py
squid_control/control/utils/: generate_software_limit.py
squid_control/hypha_tools/artifact_manager/: artifact_manager.py
squid_control/hypha_tools/chatbot/: aask.py
squid_control/stitching/: __init__.py  zarr_canvas.py
tests/: README.md  conftest.py  pytest.ini  run_zip64_tests.py  test_connection.py  test_hypha_service.py  test_squid_controller.py  test_webrtc_e2e.py  test_zip64_upload_endpoint.py  test_zip_upload_endpoints.py
tile_service/: Dockerfile  check_tiles_service.py  requirements.txt
