[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squid-control"
version = "0.1.0"
readme = "README.md"
description = "Squid Microscope Control Software"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pyserial",
    "pandas",
    "imageio",
    "scipy",
    "crc",
    "tifffile",
    "opencv-python",
    "lxml",
    "scikit-image",
    "hypha-rpc",
    "pydantic",
    "requests",
    "numpy",
    "matplotlib",
    "zarr",
    "flask",
    "python-dotenv",
    "openai",
    "blosc",
    "aiohttp",
]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
all = [
    "qtpy",
    "pyqt5",
    "pyqt5-tools",
    "pyqtgraph",
    "tensorrt",
]
qt = [
    "qtpy",
    "pyqt5",
    "pyqt5-tools",
    "pyqtgraph",
]
tracking = [
    "tensorrt",
]

[project.scripts]
squid-control = "squid_control.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["squid_control*"]
exclude = ["tests*", "scripts*"]