[metadata]
name = squid-control
version = 0.1.0
description = Squid Microscope Control Software
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pyserial
    pandas
    imageio
    scipy
    crc
    tifffile
    opencv-python
    lxml
    scikit-image
    hypha-rpc
    pydantic
    requests
    numpy
    matplotlib
    zarr
    flask
    python-dotenv
    openai
    blosc
    aiohttp

[options.extras_require]
all =
    qtpy
    pyqt5
    pyqt5-tools
    pyqtgraph
    tensorrt
qt =
    qtpy
    pyqt5
    pyqt5-tools
    pyqtgraph
tracking =
    tensorrt

[options.package_data]
* = *.txt, *.rst
hello = example_package/data/*.dat

[options.entry_points]
console_scripts =
    squid-control = squid_control.__main__:main
